// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTable should render correctly 1`] = `
<DocumentFragment>
  <table
    class="bpk-table"
  >
    <tbody />
  </table>
</DocumentFragment>
`;

exports[`BpkTable should render correctly with custom class 1`] = `
<DocumentFragment>
  <table
    class="bpk-table my-table"
  >
    <tbody />
  </table>
</DocumentFragment>
`;
